Change canva color and add some cute cursors

--- a/layouts/partials/footerInclude.html
+++ b/layouts/partials/footerInclude.html
@@ -1,4 +1,10 @@
-<script type="text/javascript" src={{ "/js/nest.js" | relURL }} count=150 color="4,238,81" opacity=0.5>
+<script type="text/javascript" src={{ "/js/nest.js" | relURL }} count=150 color="255,255,255" opacity=1>
+</script>
+
+<link rel="stylesheet" type="text/css" href="/css/cursor.css">
+<img id="Cursor" src="/images/cursor/silverwolf/01-Normal.gif">
+
+<script type="text/javascript" src={{ "/js/cursor.js" | relURL }}>
 </script>
 
 {{ if .Page.Store.Get "hasMermaid" }}
